Bug 1120079 - Do not call Range Removal algorithm after endOfStream. r=cajbir, a=sledru