dom/media/mediasource/MediaSource.h
@@ -29,6 +29,11 @@ namespace mozilla {
 class ErrorResult;
 template <typename T> class AsyncEventRunner;
 
+enum MSRangeRemovalAction: uint8_t {
+  RUN = 0,
+  SKIP = 1
+};
+
 namespace dom {
 
 class GlobalObject;
@@ -129,7 +134,7 @@ private:
   void InitializationEvent();
 
   // SetDuration with no checks.
-  void SetDuration(double aDuration);
+  void SetDuration(double aDuration, MSRangeRemovalAction aAction);
 
   nsRefPtr<SourceBufferList> mSourceBuffers;
   nsRefPtr<SourceBufferList> mActiveSourceBuffers;
