dom/media/mediasource/SourceBuffer.cpp
@@ -332,7 +332,7 @@ SourceBuffer::CheckEndTime()
   // Check if we need to update mMediaSource duration
   double endTime = GetBufferedEnd();
   if (endTime > mMediaSource->Duration()) {
-    mMediaSource->SetDuration(endTime);
+    mMediaSource->SetDuration(endTime, MSRangeRemovalAction::SKIP);
   }
 }
 
